--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -54,7 +54,7 @@
                                 <!--
                                 <image>eclipse-temurin:11-jre@sha256:10f2d98f22d80c9f594814a296a235f19f009557bcdc96b12719ebc1c0aa9d34</image>
                                 -->
-                                <image>eclipse-temurin:21-jre@sha256:sha256:8e201486c2c51c07f0c1e33bf3841a03b2d624cd3dd8a734a1ece02ac48b795a</image>
+                                <image>eclipse-temurin:21-jre@sha256:c1f2e1f082e26dd30c4ea73b3b17b24b473ab122226225dd8dcba71406167537</image>
                             </from>
                             <to>
                                 <image>${dockerImageTag}</image>
