--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.pwm-project</groupId>
         <artifactId>pwm-parent</artifactId>
-        <version>2.0.7-SNAPSHOT</version>
+        <version>2.0.7</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -45,7 +45,7 @@
                         <configuration>
                             <skip>${skipDocker}</skip>
                             <from>
-                                <!--
+                                <!--v
                                 https://hub.docker.com/layers/library/eclipse-temurin/11/images/sha256-10f2d98f22d80c9f594814a296a235f19f009557bcdc96b12719ebc1c0aa9d34
                                 -->
                                 <!--
